phf_macros/tests/compile-fail-unicase/equivalent-keys.stderr
error: duplicate key
 --> $DIR/equivalent-keys.rs:6:5
  |
6 |     UniCase::ascii("foo") => 42, //~ NOTE one occurrence here
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `proc_macro_call` (in Nightly builds, run with -Z macro-backtrace for more info)
